fix(langues): affiche correctement les lores multiligne
Convertit les retours MiniMessage et YAML en entrées de lore distinctes dans Core, Lobby et SheepWars afin d'éviter les glyphes de contrôle inconnus. Préserve les styles et les lignes vides, avec des tests dédiés pour les séparateurs Unix et Windows. Met à jour la documentation et le site généré.